overflow issue fixed?

--- a/index.css
+++ b/index.css
@@ -9,15 +9,8 @@ body, html {
     background-color: #1E201A;
 }
 
-h2 {
-    text-align: center;
-    font-size: 30px;
-}
-
-ul {
-    list-style: none;
-    font-size: 20px;
-    line-height: 40px;
+body {
+    overflow-x: hidden;
 }
 
 .projects, .contact_me {
@@ -54,7 +47,7 @@ ul {
 
 .container {
     backdrop-filter: blur(20px);
-    background-color: rgb(0, 0, 0);
+    background-color: #000000;
     background-color: rgba(0, 0, 0, 0.4);
     color: #F1FEFE;
     font-weight: bold;
@@ -70,6 +63,17 @@ ul {
     width: 50%;
     padding: 20px;
     text-align: center;
+}
+
+h2 {
+    text-align: center;
+    font-size: 30px;
+}
+
+ul {
+    list-style: none;
+    font-size: 20px;
+    line-height: 40px;
 }
 
 a {
